2009-04-06  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: evince and gnome-keyring opened
	their 2.26 branches.

2009-04-06  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules:
	* modulesets/gnome-suites-2.22.modules:
	* modulesets/gnome-suites-2.24.modules:
	* modulesets/gnome-suites-2.26.modules:
	* modulesets/gnome-suites-2.28.modules: switched glib and gtk+ to
	git.gnome.org.

2009-04-05  Felix Riemann  <friemann@svn.gnome.org>

	* modulesets/gnome-suites-2.26.modules: Fix eog branch.

2009-04-05  Felix Riemann  <friemann@svn.gnome.org>

	* modulesets/gnome-suites-2.26.modules: eog branched for 2.26.

2009-03-31  José Alburquerque  <jaalburqu@svn.gnome.org>

	* modulesets/gnome-2.22.modules:
	* modulesets/gnome-2.24.modules: Removed gstreamermm-plugins-good from
	previous stable versions; sorry for including in previous commit.

2009-03-31  José Alburquerque  <jaalburqu@svn.gnome.org>

	* modulesets/gnome-2.22.modules:
	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules:
	* modulesets/gnome-2.28.modules: Added gstreamermm-plugins-good.

2009-03-29  Fernando Herrera  <fherrera@onirica.com>

	* modulesets/gnome-external-deps-2.28.modules: update
	icon-naming-utils to 0.8.90.

2009-03-21  Jaap A. Haitsma  <jaap@haitsma.org>

	* modulesets/gnome-2.26.modules:
	* modulesets/gnome-2.28.modules:
	gst-plugins-gl moved to git on freedesktop.org

2009-03-20  Michael J. Chudobiak  <mjc@svn.gnome.org>

	* modulesets/gnome-2.26.modules:
	* modulesets/gnome-2.28.modules:
	Added moserial.

2009-03-19  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-suites-2.26.modules: Use gnome-2-26 branch of
	gnome-common.

2009-03-19  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-suites-2.26.modules: Gnome Terminal and Gucharmap
	branched for 2.26.

2009-03-19  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/git.py: support for quiet mode for git version
	control system.
