@@ -65,6 +65,7 @@ main (int    argc,
   char **args;
   int i, len;
   char *dot, *lastarg, *start;
+  int ret;
 
   lastarg = argv[argc - 1];
 
@@ -109,7 +110,7 @@ install:
   args = malloc (sizeof (char *) * (argc + 1));
 
 #ifndef WITH_INSTALL
-  args[0] = "/usr/bin/install";
+  args[0] = "install";
 #else
   args[0] = WITH_INSTALL;
 #endif
@@ -119,5 +120,8 @@ install:
 
   args[argc] = NULL;
 
-  return execv (args[0], args);
+  ret = execvp (args[0], args);
+  perror("executing 'install' failed");
+
+  return 1;
 }
